test/TestSuite/Scheduler/Correct/Container.tjp
project prj "Project" "1.0" 2009-01-01 +1m

include "checks.tji"

task S "start" {
  milestone
  start 2009-01-01
}
task E "end" {
  milestone
  end 2009-01-30
}
task C0 "C0" {
  depends S
  precedes E
  ${FixTask "2009-01-10-0:00" "2009-01-20-0:00"}
  task C1 "C1" {
    ${FixEnd "2009-01-16-18:00"}
    task T1 "T1" {
      ${FixTask "2009-01-10-0:00" "2009-01-16-18:00"}
      start 2009-1-10
      length 1w
    }
  }
  task C2 "C2" {
    ${FixStart "2009-01-13-9:00"}
    scheduling alap
    task T2 "T2" {
      ${FixTask "2009-01-13-9:00" "2009-01-20-0:00"}
      end 2009-1-20
      length 1w
    }
  }
}

taskreport t "Container" {
  formats html
  columns name, start, end, chart { scale day }
}

