test/TestSuite/Scheduler/Errors/weak_start_dep.tjp
project prj "Project" "1.0" 2009-08-16 +6m

task T1 "T1" {
  start 2009-10-01
  duration 2w
}
# MARK: error 8 weak_start_dep
task T2 "T2" {
  depends !T1
  end 2009-09-30
}
task T3 "T3" {
  depends !T2
  duration 1w
}

